--- a/package.json
+++ b/package.json
@@ -18,6 +18,19 @@
   "homepage": "https://github.com/alecannetdesdame/redelec#readme",
   "devDependencies": {
     "electron": "^1.4.4",
-    "node-redmine": "^0.1.3"
+    "node-redmine": "^0.1.3",
+    "react": "^15.3.2",
+    "babel": "^5.6.10",
+    "babel-core": "^5.6.11",
+    "babel-loader": "^5.2.2",
+    "css-loader": "^0.15.1",
+    "electron-packager": "^4.1.3",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.0",
+    "node-libs-browser": "^0.5.2",
+    "style-loader": "^0.12.3"
+  },
+  "peerDependencies": {
+    "react": "^15.3.2"
   }
 }
