--- a/package.json
+++ b/package.json
@@ -16,8 +16,22 @@
     "url": "https://github.com/alecannetdesdame/redelec/issues"
   },
   "homepage": "https://github.com/alecannetdesdame/redelec#readme",
+  "peerDependencies": {
+    "babel-core": "^6.0.0"
+  },
   "devDependencies": {
-    "electron": "^1.4.4",
-    "node-redmine": "^0.1.3"
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "electron": "^1.4.7",
+    "node-redmine": "^0.1.3",
+    "webpack": "^1.13.3"
+  },
+  "dependencies": {
+    "immutable": "^3.8.1",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0"
   }
 }
