--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0"
+  },
+  "scripts": {
+    "build": "webpack --debug",
+    "start": "???"
   }
 }
