--- a/package.json
+++ b/package.json
@@ -1,41 +1,44 @@
 {
   "name": "redelec",
-  "version": "0.0.1",
-  "description": "redelec",
-  "main": "index.js",
-  "scripts": {
-    "start": "electron main.js"
-  },
+  "version": "0.0.3",
+  "description": "Redelec",
+  "keywords": [],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alecannetdesdame/redelec.git"
   },
   "author": "Alec ANNET-DESDAME",
+  "contributors": [
+    "Alec ANNET-DESDMAE"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/alecannetdesdame/redelec/issues"
   },
   "homepage": "https://github.com/alecannetdesdame/redelec#readme",
-  "peerDependencies": {
-    "babel-core": "^6.0.0"
+  "engines" : {
+    "node" : "5.0.0",
+    "npm": "3.3.6"
   },
+"main": "src/main.js",
   "devDependencies": {
-    "babel-loader": "^6.2.8",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "electron": "^1.4.7",
-    "node-redmine": "^0.1.3",
-    "webpack": "^1.13.3"
+    "electron": "^1.4.8",
+    "electron-packager": "8.3.0",
+    "tslint": "4.0.1",
+    "typescript": "2.0.10",
+    "webpack": "^1.13.3",
+    "node-redmine": "^0.1.3"
   },
   "dependencies": {
-    "immutable": "^3.8.1",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-redux": "^4.4.6",
-    "redux": "^3.6.0"
+    "react-dom": "^15.4.1"
   },
   "scripts": {
-    "build": "webpack --debug",
-    "start": "???"
+    "test": "npm run build && tslint --project tsconfig.json",
+    "build": "npm install && tsc && webpack --display-error-details",
+    "start": "npm run build && electron .",
+    "dist:win": "npm run test && gulp dist:win",
+    "dist:osx": "npm run test && gulp dist:osx",
+    "dist:linux": "npm run test && gulp dist:linux"
   }
 }
